--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,10 @@
 Flask==1.1.2
 Werkzeug==1.0.1
-jinja2==2.11.3
+Jinja2==2.11.3
 MarkupSafe==2.0.1
 psycopg2-binary==2.9.3
 itsdangerous==2.0.1
+flask-cors==3.0.10
+requests==2.25.1
+flask-limiter==1.4 
+python-dotenv==0.15.0 
