--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,10 @@ instance/
 # Terraform state and backup files
 terraform.tfstate
 terraform.tfstate.*
+*.terraform/
+*.terraform.lock.hcl
+terraform.tfvars
+terraform.tfvars.json
 
 # OS generated files
 .DS_Store
